--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
